--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       if (url && url.length > 1) {
         url = url[1];
       } else {
-        url = "https://mileszim.github.io/chapmanapi-spec.json";
+        url = "http://mileszim.github.io/chapmanapi/chapmanapi-spec.json";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
