--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       if (url && url.length > 1) {
         url = url[1];
       } else {
-        url = "/chapmanapi/chapmanapi-spec.json";
+        url = "chapmanapi-spec.json";
       }
       window.swaggerUi = new SwaggerUi({
         url: url,
@@ -82,7 +82,11 @@
 </head>
 
 <body class="swagger-section">
-
+<div id='header'>
+  <div class="swagger-ui-wrap">
+    <a id="logo" href="https://mileszim.github.io/chapmanapi/">Chapman API Documentation</a>
+  </div>
+</div>
 
 <div id="message-bar" class="swagger-ui-wrap">&nbsp;</div>
 <div id="swagger-ui-container" class="swagger-ui-wrap"></div>
